--- a/views/create_application.hbs
+++ b/views/create_application.hbs
@@ -1,4 +1,4 @@
-<form action="/create" method="POST">
+<form action="/send_application" method="POST">
     <h3>Create massiv</h3>
     <div>
         <label>Название</label>
