--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
             <label>
                 {{#if completed}}
                 <input type="checkbox" checked name="completed">
-                <h5>{{name}}</h5>
+                <span>{{name}}</span>
                 {{else}}
                 <input type="checkbox" name="completed">
                 <span>{{name}}</span>
