--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,31 +1,80 @@
 <header class="header">
-    <div class="container">
-        <div class="header_inner">
             <nav class="nav">
+                <ul>
+                    <li class="list active">
+                        <a href="#">
+                            <span class="icon">
+                                <ion-icon name="home-outline"></ion-icon>
+                            </span>
+                            <span class="text">Главная</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#">
+                            <span class="icon">
+                                <ion-icon name="call-outline"></ion-icon>
+                            </span>
+                            <span class="text">Записаться на ремонт</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#">
+                            <span class="icon">
+                                <ion-icon name="reorder-four-outline"></ion-icon>
+                            </span>
+                            <span class="text">Контакты</span>
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#">
+                            <span class="icon">
+                                <ion-icon name="cash-outline"></ion-icon>
+                            </span>
+                            <span class="text">Прайс лист</span>
+                        </a>
+                    </li>
+                    <div class="indicator"></div>
+                    <script>
+                        const list = document.querySelectorAll('.list');
+                        function activeLink(){
+                            list.forEach((item) =>
+                                item.classList.remove('active'));
+                                this.classList.add('active');
+                        }
+                        list.forEach((item)=>
+                        item.addEventListener('click', activeLink));
+                    </script>
+                </ul>
                 
-                <a class="nav_link" href="/create">Создать</a>
-                
-                {{!-- {{#if table}}
-                <a class="nav_link_active" href="/table">Карты</a>
-                {{else}}
-                <a class="nav_link" href="/table">Карты</a>
-                {{/if}}
-                {{#if coupon}}
-                <a class="nav_link_active" href="/coupons">Купоны</a>
-                {{else}}
-                <a class="nav_link" href="/coupons">Купоны</a>
-                {{/if}}
-                {{#if history}}
-                <a class="nav_link_active" href="/history">История</a>
-                {{else}}
-                <a class="nav_link" href="/history">История</a>
-                {{/if}}
-                {{#if ratingcheck}}
-                <a class="nav_link_active" href="/rating">Оценки</a>
-                {{else}}
-                <a class="nav_link" href="/rating">Оценки</a>
-                {{/if}} --}}
             </nav>
-        </div>
-    </div>
+            
+            <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </header>
+
+
+{{!-- <a class="nav_link" href="/create_application">Главная</a>
+<a class="nav_link" href="/create_application">Прайс лист</a>
+<a class="nav_link" href="/create_application">Записаться на ремонт</a>
+<a class="nav_link" href="/create_application">Контакты</a>
+<a class="nav_link" href="/create_application">Молчать</a> --}}
+{{!-- {{#if table}}
+<a class="nav_link_active" href="/table">Карты</a>
+{{else}}
+<a class="nav_link" href="/table">Карты</a>
+{{/if}}
+{{#if coupon}}
+<a class="nav_link_active" href="/coupons">Купоны</a>
+{{else}}
+<a class="nav_link" href="/coupons">Купоны</a>
+{{/if}}
+{{#if history}}
+<a class="nav_link_active" href="/history">История</a>
+{{else}}
+<a class="nav_link" href="/history">История</a>
+{{/if}}
+{{#if ratingcheck}}
+<a class="nav_link_active" href="/rating">Оценки</a>
+{{else}}
+<a class="nav_link" href="/rating">Оценки</a>
+{{/if}} --}}
