--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -43,38 +43,15 @@
                         }
                         list.forEach((item)=>
                         item.addEventListener('click', activeLink));
+
+                        
                     </script>
                 </ul>
                 
+                <p style="text-align: center; margin-right: 10px;">ПН - ВС 10:00 - 21:00 <br> Без выходных</p>
+            
             </nav>
             
             <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
             <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </header>
-
-
-{{!-- <a class="nav_link" href="/create_application">Главная</a>
-<a class="nav_link" href="/create_application">Прайс лист</a>
-<a class="nav_link" href="/create_application">Записаться на ремонт</a>
-<a class="nav_link" href="/create_application">Контакты</a>
-<a class="nav_link" href="/create_application">Молчать</a> --}}
-{{!-- {{#if table}}
-<a class="nav_link_active" href="/table">Карты</a>
-{{else}}
-<a class="nav_link" href="/table">Карты</a>
-{{/if}}
-{{#if coupon}}
-<a class="nav_link_active" href="/coupons">Купоны</a>
-{{else}}
-<a class="nav_link" href="/coupons">Купоны</a>
-{{/if}}
-{{#if history}}
-<a class="nav_link_active" href="/history">История</a>
-{{else}}
-<a class="nav_link" href="/history">История</a>
-{{/if}}
-{{#if ratingcheck}}
-<a class="nav_link_active" href="/rating">Оценки</a>
-{{else}}
-<a class="nav_link" href="/rating">Оценки</a>
-{{/if}} --}}
