--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,20 @@
-<h2>Create page</h2>
+<h1>ГЛАВНАЯ)</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{{!-- <h2>Create page</h2>
 
 {{#if massiv.length}}
 <ul>
@@ -24,4 +40,4 @@
 </ul>
 {{else}}
 <h3>pustoi massiv</h3>
-{{/if}}
+{{/if}} --}}
