--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,20 @@
-*{
-    box-sizing: border-box;
+body{
     margin: 0;
-    padding: 0;
     font-family: Nunito Sans, sans-serif;
+    font-size: 16px;
+    color: #191919;
+} 
+
+*,
+*:before,
+*::after{
+    box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6, h7, h8{
     margin: 0;
 }
-:root{
-    --clr: #222327;
-}
+
 /*-----------------------------------------------------------Container*/
 
 .container{
@@ -23,121 +27,68 @@ h1, h2, h3, h4, h5, h6{
 /*-----------------------------------------------------------Header*/
 
 .header{ 
-    display: flex;
-    justify-content: center;
+    height: 64px;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    border-bottom: 1px solid #191919;
+    background-color: #DCDCDC;
     align-items: center;
-    background: var(--clr);
-    min-height: 20vh;
+    vertical-align: middle;
+    display: flex;
+    justify-content: space-between;
 }
-
-
 
 /*----------------------------------------------------------Navigation*/
 
 .nav{
-    position: relative;
-    width: 1500px;
-    height: 80px;
-    background: white;
+    width: auto;
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 10px;
-}
-
-.nav ul{
-    display: flex;
-    margin-right: 100px;
-    margin-left: 100px;
     
 }
-.nav ul li{
-    position: relative;
-    list-style: none;
-    width: 70px;
-    height: 70px;
-    z-index: 1;
-}
-.nav ul li a{
-    position: relative;
+.nav_right{
+    width: auto;
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-right: 20px;
     display: flex;
-    justify-content: center;
+    vertical-align: middle;
     align-items: center;
-    flex-direction: column;
-    width: 100%;
+}
+
+.nav_link{
+    margin-left: 50px;
+    color: #666363;
+    text-decoration: none;
+    opacity: 0.75;
+    transition:0.3s;
+
+    
     text-align: center;
-    font-weight: 600;
 }
-.nav ul li a .icon{
-    position: relative;
-    display: block;
-    line-height: 80px;
-    font-size: 1.5em;
-    text-align: center;
-    transition: .5s;
-    color: var(--clr);
+
+.nav_link:first-child{
+    margin-left: 0;
 }
-.nav ul li.active a .icon{
-    transform: translateY(-45px);
-}
-.nav ul li a .text{
-    position: absolute;
-    color: var(--clr);
-    font-weight: 600;
-    font-size: 1em;
-    letter-spacing: .03em;
-    transition: .5s;
-    opacity: 0;
-    transform: translateY(20px);
-}
-.nav ul li.active a .text{
+
+
+
+.nav_link:hover{
+    color: black;
     opacity: 1;
-    transform: translateY(10px);
-}
-.indicator{
-    position: absolute;
-    top: -50%;
-    width: 70px;
-    height: 70px;
-    background: orange;
-    border-radius: 50%;
-    border: 6px solid var(--clr);
-    transition: .5s;
+    text-decoration: underline;
+    color: aqua;
+    cursor: pointer;
+  
 }
 
-.indicator::before{
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: -22px;
-    width: 20px;
-    height: 20px;
-    background: transparent;
-    border-top-right-radius: 20px;
-    box-shadow: 0px -10px 0 0 var(--clr);
-}
-
-.indicator::after{
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: -22px;
-    width: 20px;
-    height: 20px;
-    background: transparent;
-    border-top-left-radius: 20px;
-    box-shadow: 0px -10px 0 0 var(--clr);
-}
-
-.nav ul li:nth-child(1).active ~ .indicator{
-    transform: translateX(calc(70px * 0));
-}
-.nav ul li:nth-child(2).active ~ .indicator{
-    transform: translateX(calc(70px * 1));
-}
-.nav ul li:nth-child(3).active ~ .indicator{
-    transform: translateX(calc(70px * 2));
-}
-.nav ul li:nth-child(4).active ~ .indicator{
-    transform: translateX(calc(70px * 3));
+.nav_link_active{
+  margin-left: 50px;
+  color: black;
+  text-decoration:underline;
+  align-items: center;
 }
