--- a/public/style.css
+++ b/public/style.css
@@ -1,20 +1,16 @@
-body{
-    margin: 0;
-    font-family: Nunito Sans, sans-serif;
-    font-size: 16px;
-    color: #191919;
-} 
-
-*,
-*:before,
-*::after{
+*{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Nunito Sans, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, h7, h8{
+h1, h2, h3, h4, h5, h6{
     margin: 0;
 }
-
+:root{
+    --clr: #222327;
+}
 /*-----------------------------------------------------------Container*/
 
 .container{
@@ -27,68 +23,133 @@ h1, h2, h3, h4, h5, h6, h7, h8{
 /*-----------------------------------------------------------Header*/
 
 .header{ 
-    height: 64px;
-    width: 100%;
-    top: 0;
-    z-index: 1000;
-    border-bottom: 1px solid #191919;
-    background-color: #DCDCDC;
-    align-items: center;
-    vertical-align: middle;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    background: var(--clr);
+    min-height: 20vh;
 }
+
+
 
 /*----------------------------------------------------------Navigation*/
 
 .nav{
-    width: auto;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
+    position: relative;
+    width: 1300px;
+    height: 70px;
+    width: 1500px;
+    height: 80px;
+    background: white;
     display: flex;
-    
-}
-.nav_right{
-    width: auto;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-right: 20px;
-    display: flex;
-    vertical-align: middle;
+    justify-content: space-between;
     align-items: center;
+    border-radius: 10px;
 }
 
-.nav_link{
+.nav ul{
+    display: flex;
+
     margin-left: 50px;
-    color: #666363;
-    text-decoration: none;
-    opacity: 0.75;
-    transition:0.3s;
-
+    margin-right: 50px;
+    justify-content: space-between;
+    margin-right: 100px;
+    margin-left: 100px;
     
+}
+.nav ul li{
+    position: relative;
+    list-style: none;
+    width: 70px;
+    height: 70px;
+    z-index: 1;
+}
+.nav ul li a{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
     text-align: center;
+    font-weight: 600;
 }
-
-.nav_link:first-child{
-    margin-left: 0;
+.nav ul li a .icon{
+    position: relative;
+    display: block;
+    line-height: 70px;
+    line-height: 80px;
+    font-size: 1.5em;
+    text-align: center;
+    transition: .5s;
+    color: var(--clr);
 }
-
-
-
-.nav_link:hover{
-    color: black;
+.nav ul li.active a .icon{
+    transform: translateY(-35px);
+    transform: translateY(-45px);
+}
+.nav ul li a .text{
+    position: absolute;
+    color: var(--clr);
+    font-weight: 600;
+    font-size: 1em;
+    letter-spacing: .05em;
+    letter-spacing: .03em;
+    transition: .5s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+.nav ul li.active a .text{
     opacity: 1;
-    text-decoration: underline;
-    color: aqua;
-    cursor: pointer;
-  
+    transform: translateY(20px);
+    transform: translateY(10px);
+}
+.indicator{
+    position: absolute;
+    top: -50%;
+    width: 70px;
+    height: 70px;
+    background: orange;
+    border-radius: 50%;
+    border: 6px solid var(--clr);
+    transition: .5s;
 }
 
-.nav_link_active{
-  margin-left: 50px;
-  color: black;
-  text-decoration:underline;
-  align-items: center;
+.indicator::before{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -22px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-right-radius: 20px;
+    box-shadow: 0px -10px 0 0 var(--clr);
+}
+
+.indicator::after{
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: -22px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-left-radius: 20px;
+    box-shadow: 0px -10px 0 0 var(--clr);
+}
+
+.nav ul li:nth-child(1).active ~ .indicator{
+    transform: translateX(calc(70px * 0 + 25%));
+    transform: translateX(calc(70px * 0));
+}
+.nav ul li:nth-child(2).active ~ .indicator{
+    transform: translateX(calc(270% * 2));
+    transform: translateX(calc(70px * 1));
+}
+.nav ul li:nth-child(3).active ~ .indicator{
+    transform: translateX(calc(70px * 2));
+}
+.nav ul li:nth-child(4).active ~ .indicator{
+    transform: translateX(calc(70px * 3));
 }
