--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,19 @@
-<h1>ГЛАВНАЯ)</h1>
+<div class="main_container">
+    <div class="main_left">
+        <h1 class="main_page_header">Ремонт смартфонов по всей России</h1>
+        <ul>
+            <li>Быстро<br></li>
+            
+            <li>Качественно</li>
+            
+            <li>Не дорого</li>
+        </ul>
+    </div>
+    <div class="main_right">
+        <img src="/service.jpg" width="750px" alt="">
+    </div>
+</div>
+
 
 
 
