--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,72 +1,75 @@
- <header class="header">
-            <nav class="nav">
-                <ul>
-                    {{#if home}}
-                    <li class="list active">
-                        <a href="/">
-                            <span class="icon">
-                                <ion-icon name="home-outline"></ion-icon>
-                            </span>
-                            <span class="text">Главная</span>
-                        </a>
-                    </li>
-                    {{else}}
-                    <li class="list">
-                        <a href="/">
-                            <span class="icon">
-                                <ion-icon name="home-outline"></ion-icon>
-                            </span>
-                            <span class="text">Главная</span>
-                        </a>
-                    </li>
-                    {{/if}}
-                    {{#if create_application}}
-                    <li class="list active">
-                        <a href="/create_application">
-                            <span class="icon">
-                                <ion-icon name="call-outline"></ion-icon>
-                            </span>
-                            <span class="text">Записаться на ремонт</span>
-                        </a>
-                    </li>
-                    {{else}}
-                    <li class="list">
-                        <a href="/create_application">
-                            <span class="icon">
-                                <ion-icon name="call-outline"></ion-icon>
-                            </span>
-                            <span class="text">Записаться на ремонт</span>
-                        </a>
-                    </li>
-                    {{/if}}
-                    <li class="list">
-                        <a href="#">
-                            <span class="icon">
-                                <ion-icon name="reorder-four-outline"></ion-icon>
-                            </span>
-                            <span class="text">Контакты</span>
-                        </a>
-                    </li>
-                    <li class="list">
-                        <a href="#">
-                            <span class="icon">
-                                <ion-icon name="cash-outline"></ion-icon>
-                            </span>
-                            <span class="text">Прайс лист</span>
-                        </a>
-                    </li>
-                    <div class="indicator"></div>
-                    <script>
-                        
+<header class="header">
+    <div class="container">
+        <nav class="nav">
+            <ul>
+                {{#if home}}
+                <li class="list active">
+                    <a href="/">
+                        <span class="icon">
+                            <ion-icon name="home-outline"></ion-icon>
+                        </span>
+                        <span class="text">Главная</span>
+                    </a>
+                </li>
+                {{else}}
+                <li class="list">
+                    <a href="/">
+                        <span class="icon">
+                            <ion-icon name="home-outline"></ion-icon>
+                        </span>
+                        <span class="text">Главная</span>
+                    </a>
+                </li>
+                {{/if}}
+                {{#if create_application}}
+                <li class="list active">
+                    <a href="/create_application">
+                        <span class="icon">
+                            <ion-icon name="call-outline"></ion-icon>
+                        </span>
+                        <span class="text">Записаться на ремонт</span>
+                    </a>
+                </li>
+                {{else}}
+                <li class="list">
+                    <a href="/create_application">
+                        <span class="icon">
+                            <ion-icon name="call-outline"></ion-icon>
+                        </span>
+                        <span class="text">Записаться на ремонт</span>
+                    </a>
+                </li>
+                {{/if}}
+                <li class="list">
+                    <a href="#">
+                        <span class="icon">
+                            <ion-icon name="reorder-four-outline"></ion-icon>
+                        </span>
+                        <span class="text">Контакты</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="#">
+                        <span class="icon">
+                            <ion-icon name="cash-outline"></ion-icon>
+                        </span>
+                        <span class="text">Прайс лист</span>
+                    </a>
+                </li>
+                <div class="indicator"></div>
+                <script>
 
-                        
-                    </script>
-                </ul>
-                
-                <p style="text-align: center; margin-right: 10px;">ПН - ВС 10:00 - 21:00 <br> Без выходных</p>
-            
-            </nav>
-            
-            <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-            <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+
+                </script>
+            </ul>
+            <div class="logo">
+                <p style="text-align: center;">ПН - ВС 10:00 - 21:00 <br> Без выходных</p>
+                <a href="/"><img style="border: 0;" src="/logo.png" alt=""></a>
+            </div>
+        </nav>
+
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    </div>
 </header>
