--- a/views/create_application.hbs
+++ b/views/create_application.hbs
@@ -1,8 +1,27 @@
 <form action="/send_application" method="POST">
-    <h3>Create massiv</h3>
+    <h3>Создать заявку</h3>
     <div>
-        <label>Название</label>
-        <input type="text" name="name">
+        <label>Номер телефона</label>
+        <input type="text" name="phone_number">
+
+        <label>Тип устройства</label>
+        <select name="device_type">
+            <option value="0" selected>Смартфон</option>
+            <option value="1">Планшет</option>
+        </select>
+
+        <label>Бренд</label>
+        <input type="text" name="brand">
+
+        <label>Модель</label>
+        <input type="text" name="model">
+
+        <label>Поломка</label>
+        <input type="text" name="defect">
+
+        <label>Комментарий</label>
+        <input type="text" name="comment">
+
     </div>
     <button type="submit">Create!!!</button>
 </form>
