--- a/views/create_application.hbs
+++ b/views/create_application.hbs
@@ -1,5 +1,5 @@
 <form action="/send_application" method="POST">
-    <h3>Создать заявку</h3>
+    <h1>Запишитесь на ремонт прямо сейчас!</h1>
     <div>
         <label>Номер телефона</label>
         <input type="text" name="phone_number">
