--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -80,7 +80,7 @@
                 {{/if}}
                 {{#if cab}}
                 <li class="list active">
-                    <a href="#">
+                    <a href="/cab">
                         <span class="icon">
                             <ion-icon name="person-circle-outline"></ion-icon>
                         </span>
@@ -89,7 +89,7 @@
                 </li>
                 {{else}}
                 <li class="list">
-                    <a href="#">
+                    <a href="/cab">
                         <span class="icon">
                             <ion-icon name="person-circle-outline"></ion-icon>
                         </span>
@@ -100,6 +100,8 @@
                 <div class="indicator"></div>
             </ul>
             <div class="logo">
+                <a href="/enter">Войти</a>
+                
                 <p style="text-align: center;">ПН - ВС 10:00 - 21:00 <br> Без выходных</p>
                 <a href="/"><img style="border: 0;" src="/logo.png" alt=""></a>
             </div>
