--- a/views/registration_page.hbs
+++ b/views/registration_page.hbs
@@ -1,16 +1,18 @@
 <div class="container">
     <div class="enter">
-        <h1>Вход</h1>
-        <form action="/login" method="post">
+        <h1>Регистрация</h1>
+        <form action="/registration" method="post">
             
                 <label class="search_link" for="username">Логин</label>
                 <input class="search_link" style="margin: 0;" name="username" type="text">
+
+                <label class="search_link" for="phone_number">Номер телефона</label>
+                <input class="search_link" style="margin: 0;" name="phone_number" type="text">
             
                 <label class="search_link" for="password">Пароль</label>
                 <input class="search_link" style="margin: 0;" type="password" name="password" type="text">
             <br>
-            <button class="btn" style="margin-top: 20px;" type="submit">Войти</button>
+            <button class="btn" style="margin-top: 20px;" type="submit">Регистрация</button>
         </form>
-        <a href="/registration_page">Зарегистрироваться</a>
     </div>
 </div>
