--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -100,9 +100,8 @@
                 <div class="indicator"></div>
             </ul>
             <div class="logo">
-                <a href="/enter">Войти</a>
                 
-                <p style="text-align: center;">ПН - ВС 10:00 - 21:00 <br> Без выходных</p>
+                <a href="/out">Выйти</a>
                 <a href="/"><img style="border: 0;" src="/logo.png" alt=""></a>
             </div>
         </nav>
