--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -11,4 +11,5 @@
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="shortcut icon" href="/icon.png" type="image/png">
     <title>{{title}}</title>
+    <script src="//code.jivo.ru/widget/GDtQYhAVnm" async></script>
 </head>
