added contacts and map

--- a/views/contacts.hbs
+++ b/views/contacts.hbs
@@ -1,1 +1,2 @@
 <h1>Контакты</h1>
+<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A88cd67b151dfd12fadecf1f1425712c727d22eb5824b81e599464e9bd28006ef&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
