--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -42,7 +42,7 @@
                 {{/if}}
                 {{#if contacts}}
                 <li class="list active">
-                    <a href="#">
+                    <a href="/contacts">
                         <span class="icon">
                             <ion-icon name="reorder-four-outline"></ion-icon>
                         </span>
@@ -51,7 +51,7 @@
                 </li>
                 {{else}}
                 <li class="list">
-                    <a href="#">
+                    <a href="/contacts">
                         <span class="icon">
                             <ion-icon name="reorder-four-outline"></ion-icon>
                         </span>
