--- a/public/style.css
+++ b/public/style.css
@@ -69,8 +69,6 @@ h1, h2, h3, h4, h5, h6{
 
 .nav{
     position: relative;
-    width: 1300px;
-    height: 70px;
     width: 1500px;
     height: 80px;
     background: white;
@@ -185,24 +183,24 @@ h1, h2, h3, h4, h5, h6{
     transform: translateX(calc(120px * 4));
 }
 
-
+/* -----------------------------------------------------Таблицы */
 #myTable {
     border-collapse: collapse; 
     width: 100%;
     font-size: 14px;
+    border: 1px solid rgba(0, 0, 0, .3);
+    overflow: hidden; 
+    border-radius: 10px;
     
   }
   
   #myTable th {
     text-align: center; 
     justify-content: center;
-    z-index: 1000;
-    border-bottom: 1px solid rgba(0, 0, 0, .3);
+    
     border-right: 1px solid rgba(0, 0, 0, .3);
     text-transform: uppercase;
-    background-color: #DCDCDC;
-    position: -webkit-sticky;
-    position: sticky;
+    background-color: white;
     top: 0;
     height: 64px;
     
@@ -216,8 +214,12 @@ h1, h2, h3, h4, h5, h6{
   #myTable tr {
     /* background-color: #f0f0f0; */
     border-bottom: 1px solid rgba(0, 0, 0, .3);
+    background-color: white;
   }
 
   #myTable tr:hover{
     background-color: #e8e6e6;
   }
+  
+
+  
