--- a/views/create_application.hbs
+++ b/views/create_application.hbs
@@ -2,7 +2,7 @@
     <h1>Запишитесь на ремонт прямо сейчас!</h1>
     <div>
         <label>Номер телефона</label>
-        <input type="text" name="phone_number">
+        <input type="text" name="phone_number" value={{phone}}>
 
         <label>Тип устройства</label>
         <select name="device_type">
@@ -18,6 +18,9 @@
 
         <label>Поломка</label>
         <input type="text" name="defect">
+
+        <label>Дата Вашего визита</label>
+        <input type="datetime-local" name="date_visit">
 
         <label>Комментарий</label>
         <input type="text" name="comment">
