add delete function

--- a/views/adminCab.hbs
+++ b/views/adminCab.hbs
@@ -48,7 +48,7 @@
                         height="25px">
                 </td>
                 <td>
-                    <input type="image" src="delete.svg" form={{_id}} formaction="/delete_applications" formmethod="post" width="25px"
+                    <input type="image" src="delete.svg" form={{_id}} formaction="/delete_application" formmethod="get" width="25px"
                         height="25px">
                 </td>
 
