add new fields in application

--- a/views/create_application.hbs
+++ b/views/create_application.hbs
@@ -11,7 +11,9 @@
         </select>
 
         <label>Бренд</label>
-        <input type="text" name="brand">
+        <select name="brand" id="brand">
+            <option value="apple">Apple</option>
+        </select>
 
         <label>Модель</label>
         <input type="text" name="model">
