--- a/views/registration_page.hbs
+++ b/views/registration_page.hbs
@@ -11,6 +11,12 @@
             
                 <label class="search_link" for="password">Пароль</label>
                 <input class="search_link" style="margin: 0;" type="password" name="password" type="text">
+
+                <label class="search_link" for="name">Имя</label>
+                <input class="search_link" style="margin: 0;" type="text" name="name" type="text">
+
+                <label class="search_link" for="lastname">Фамилия</label>
+                <input class="search_link" style="margin: 0;" type="text" name="lastname" type="text">
             <br>
             <button class="btn" style="margin-top: 20px;" type="submit">Регистрация</button>
         </form>
