--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
         </ul>
     </div>
     <div class="main_right">
-        <img src="/service.jpg" width="750px" height="500px" alt="">
+        <img src="/service.webp" width="750px" height="500px" alt="">
     </div>
 </div>
 
