--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -27,7 +27,7 @@
                         <span class="icon">
                             <ion-icon name="call-outline"></ion-icon>
                         </span>
-                        <span class="text">Записаться на ремонт</span>
+                        <span class="text">Запись</span>
                     </a>
                 </li>
                 {{else}}
@@ -36,7 +36,7 @@
                         <span class="icon">
                             <ion-icon name="call-outline"></ion-icon>
                         </span>
-                        <span class="text">Записаться на ремонт</span>
+                        <span class="text">Запись</span>
                     </a>
                 </li>
                 {{/if}}
@@ -65,7 +65,7 @@
                         <span class="icon">
                             <ion-icon name="cash-outline"></ion-icon>
                         </span>
-                        <span class="text">Прайс лист</span>
+                        <span class="text">Цены</span>
                     </a>
                 </li>
                 {{else}}
@@ -74,7 +74,7 @@
                         <span class="icon">
                             <ion-icon name="cash-outline"></ion-icon>
                         </span>
-                        <span class="text">Прайс лист</span>
+                        <span class="text">Цены</span>
                     </a>
                 </li>
                 {{/if}}
@@ -84,7 +84,7 @@
                         <span class="icon">
                             <ion-icon name="person-circle-outline"></ion-icon>
                         </span>
-                        <span class="text">Личный кабинет</span>
+                        <span class="text">Авторизация</span>
                     </a>
                 </li>
                 {{else}}
@@ -93,7 +93,7 @@
                         <span class="icon">
                             <ion-icon name="person-circle-outline"></ion-icon>
                         </span>
-                        <span class="text">Личный кабинет</span>
+                        <span class="text">Авторизация</span>
                     </a>
                 </li>
                 {{/if}}
